# alpheus_distinguendus

./: .env  Cargo.toml
app/: package.json  users.json
app/public/: index.html
app/src/: App.css  App.js
app/src/main/: _shebei.js  haocai.js  kehu.js  rizhi.js  shebei.js  user.js  xiangmu.js  yuangong.js
app/src/shebei/: DataTable.js  DrawerView.js  styles.css
db/: Ad.db3  Ad.db3-shm  Ad.db3-wal
src/: main.rs
src/books/: _simple_broker.rs  file.rs  haocai.rs  kehu.rs  mod.rs  rizhi.rs  shebei.rs  simple_broker.rs  user.rs  xiangmu.rs  yuangong.rs
static/: index.html
static/css/: index.css
tada/: .eslintcache  package.json
tada/src/: App.js  App_todo.js  Login.js  index.js
tada/src/Pages/: Haocai.js  Kehu.js  MyRoute.js  Rizhi.js  Shebei.js  Shebei_.js  User.js  Xiangmu.js  Yuangong.js
文件/: 固定资产盘点表2020.8.31.xlsx  字段.xlsx
