[package]
name = "alpheus_distinguendus"
version = "0.1.0"
authors = ["Archimboldi <1751844336@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
futures = "0.3.6"
actix-files = "0.4.0"
actix-multipart = "0.3.0"
async-std = "1.6.5"
local_ipaddress = "0.1.3"
actix-web-actors = "3.0.0"
async-graphql = "*"
async-graphql-actix-web = "*"
slab = "0.4.2"
tokio = { version = "0.3.0", features = ["time", "stream"] }
once_cell = "1.0"
sqlx = { version = "0.3.5", features = [ "sqlite" ] }
anyhow = "1.0.31"
thiserror = "1.0.20"
sqlx-core = "0.3.5"
dotenv = "*"
actix-cors = "*"